Fix saving a problem with the colors swapped. Add player to play header in the UI. Make ko threat input tablet friendly. Fix :hover issues on tablet. Add a visual cue with immortal stone liberties.

--- a/static/less/tsumego.less
+++ b/static/less/tsumego.less
@@ -13,6 +13,10 @@
 @immortal_color: fadeout(#2d2, 10%);
 @escaped_color: fadeout(#dc2, 10%);
 
+.inline-radio-title {
+    margin-right: 0.6em;
+}
+
 .best-result {
     font-weight: bold;
 }
@@ -84,7 +88,7 @@
 
             .black-move:hover {
                 .black;
-                background-color: 0.25 * @board_color;
+                background-color: 0.3 * @board_color;
             }
 
             .white-move:hover {
